argocd/base/argo-cd-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-cd-ui
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  tls:
  - hosts:
    - argocd.cddeployment1.example.com
    secretName: argocd-secret
  rules:
  - host: argocd.cddeployment1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: http
